Fix Config Manager (checkbox & overflow) + Search bar icons

--- a/style/ui/admin.css
+++ b/style/ui/admin.css
@@ -18,9 +18,3 @@
 #admin__version {
 	@apply text-secondary mt-6 text-xs font-medium float-right;
 }
-
-#config__manager {
-	fieldset {
-		@apply !bg-transparent;
-	}
-}
